# Cloudreve-Sync

./: .gitignore  Cargo.toml  LLMs.txt  README.md  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: dev.md  prd.md  ui.md
src/: App.vue  cloudreve.rs  config.rs  error.rs  i18n.ts  lib.rs  logging.rs  main.rs  main.ts  placeholders.rs  requests.rs  sync.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/resources/: cloudreve-sync.desktop
src-tauri/src/: main.rs
src-tauri/src/core/: cloudreve.rs  config.rs  credentials.rs  db.rs  error.rs  logging.rs  mod.rs  requests.rs  sync.rs
src-tauri/src/core/requests/: auth.rs  common.rs  user.rs
src-tauri/tests/: api_tests.rs  db_tests.rs
src/components/: SideNav.vue  TopBar.vue
src/locales/: en.ts  zh.ts
src/requests/: auth.rs
src/router/: index.ts
src/services/: api.ts  bootstrap.ts  types.ts
src/styles/: layout.css  theme.css
src/views/: About.vue  Conflicts.vue  Dashboard.vue  Logs.vue  Settings.vue  Tasks.vue
