[package]
name = "cloudreve-sync"
version = "0.1.0"
edition = "2024"

[lib]
name = "cloudreve_sync_sdk"
path = "src/lib.rs"

[[bin]]
name = "cloudreve_sync_client"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
crossbeam-channel = "0.5.13"
directories = "5.0.1"
fltk = "=1.5.4"
lazy_static = "1.5.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
tray-item = { version = "0.9.0", features = ["ksni"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"
