[package]
name = "cloudreve-sync-app"
version = "0.1.0"
edition = "2021"

[package.metadata.tauri]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
directories = "5.0.1"
keyring = "2.3.3"
lazy_static = "1.5.0"
reqwest = { version = "0.13.1", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
sha2 = "0.10.8"
urlencoding = "2.1.3"
walkdir = "2.5.0"
filetime = "0.2.25"
uuid = { version = "1.10.0", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
httpmock = "0.7.0"
tempfile = "3.12.0"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
